<resources>
    <string name="app_name">Calculator</string>
    <string name="key_one">1</string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_split">/</string>
    <string name="key_multiply">*</string>
    <string name="key_seven">7</string>
    <string name="key_eight">8</string>
    <string name="key_nine">9</string>
    <string name="key_equals">=</string>
    <string name="key_four">4</string>
    <string name="key_five">5</string>
    <string name="key_six">6</string>
    <string name="key_free">3</string>
    <string name="key_dot">.</string>
    <string name="key_two">2</string>
    <string name="key_zero">0</string>
    <string name="result">result</string>
    <string name="key_percent">%</string>
    <string name="key_clear_all">C</string>
    <string name="key_clear">←</string>
</resources>