<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/result_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/operation"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/operation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/result_size"
        app:layout_constraintLeft_toRightOf="@+id/result"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="@dimen/result_size"
        tool:layout_constraintLeft_toLeftOf="parent"
        tool:layout_constraintRight_toRightOf="parent"
        tool:layout_constraintTop_toBottomOf="@+id/result" />

    <GridLayout
        android:id="@+id/buttonPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/default_margin"
        android:columnCount="4"
        tool:layout_constraintLeft_toLeftOf="parent"
        tool:layout_constraintRight_toRightOf="parent"
        tool:layout_constraintTop_toBottomOf="@+id/edit">

        <Button
            android:id="@+id/btn_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/key_seven"
            android:textSize="@dimen/button_size" />

        <Button
            android:id="@+id/btn_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/key_eight"
            android:textSize="@dimen/button_size" />

        <Button
            android:id="@+id/btn_nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/key_nine"
            android:textSize="@dimen/button_size" />

        <Button
            android:id="@+id/btn_split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/key_split"
            android:textSize="@dimen/button_size" />

        <Button
            android:id="@+id/btn_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/key_four"
            android:textSize="@dimen/button_size" />

        <Button
            android:id="@+id/btn_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/key_five"
            android:textSize="@dimen/button_size" />

        <Button
            android:id="@+id/btn_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/key_six"
            android:textSize="@dimen/button_size" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/key_multiply"
            android:textSize="@dimen/button_size" />

        <Button
            android:id="@+id/btn_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/key_one"
            android:textSize="@dimen/button_size" />

        <Button
            android:id="@+id/btn_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/key_two"
            android:textSize="@dimen/button_size" />

        <Button
            android:id="@+id/btn_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/key_free"
            android:textSize="@dimen/button_size" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/key_plus"
            android:textSize="@dimen/button_size" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/key_clear_all"
            android:textSize="@dimen/button_size" />

        <Button
            android:id="@+id/btn_zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/key_zero"
            android:textSize="@dimen/button_size" />

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/key_dot"
            android:textSize="@dimen/button_size" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/key_minus"
            android:textSize="@dimen/button_size" />


        <Button
            android:id="@+id/btn_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/key_equals"
            android:textSize="@dimen/button_size" />


    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>